<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kosher Liquor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product_info">ProductInfo</string>
    <string name="title_activity_list"> </string>
    <string name="title_activity_search">searchActivity</string>
    <string name="update_title">update</string>
    <string name="update_message">Do you want to update your data?</string>
    <string name="info_title">Information:</string>
    <string name="info_message">The list is managed by rabbi Shmuel Semelman from the jerusalem rabanut</string>
    <string name="updating_title">Please wait…</string>
    <string name="updating_message">Updating…</string>
    <string name="clean_message">Cleaning…</string>
    <string name="updating_data">Updating database…</string>
    <string name="downloading_pre">Downloading </string>
    <string name="downloading_post"> data…</string>
    <string name="update_error">Unable to update data</string>
    <string name="barcode_error">No product found</string>
    <string name="barcode_not_found_title">Barcode not found</string>
    <string name="barcode_not_found_hint">Product name…</string>
    <string name="barcode_sent">Barcode sent</string>
    <string name="barcode_sent_pending">Network is offline, will send when Network will be enabled</string>
    <string name="barcode_no_xzing">Please install zxing</string>
    <string name="background_done">Done</string>
    <string name="update_network_down">Cannot update while network is down</string>
    <string name="search_no_suggestion">no suggestion…</string>
    <string name="title_activity_new_product">newProduct</string>
    <string name="title_activity_test">testActivity</string>
    <string name="barcode_name_not_inserted">Please insert name…</string>
    <string name="product_info_not_exist">No product</string>

    <string name="product_info_name">name:</string>
    <string name="product_info_barcode">barcode:</string>
    <string name="product_info_kashrut">kashrut:</string>

    <string name="menu_update">Update</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_barcode">Barcode</string>
    <string name="menu_send">Send</string>
    <string name="menu_language">Language</string>

    <string name="getting_language">Updating language texts…</string>
    <string name="language_dialog_title">Pick language:</string>

</resources>
